<?xml version="1.0"?>
<package format="3">
  <name>px4_launch</name>
  <version>0.0.1</version>
  <description>Custom PX4 MAVROS launch package</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
